<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_c5" />

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_homepage"
            style="@style/bottom_tab"
            android:drawableTop="@drawable/home_button_selector"
            android:text="@string/home_page" />

        <RadioButton
            android:id="@+id/rb_tourism"
            style="@style/bottom_tab"
            android:drawableTop="@drawable/tourism_button_selector"
            android:text="@string/tourism" />

        <RadioButton
            android:id="@+id/rb_talent"
            style="@style/bottom_tab"
            android:drawableTop="@drawable/master_button_selector"
            android:paddingTop="10dp"
            android:text="@string/talent" />

        <RadioButton
            android:id="@+id/rb_service"
            style="@style/bottom_tab"
            android:drawableTop="@drawable/customer_button_selector"
            android:text="@string/customer_service" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/bottom_tab"
            android:drawableTop="@drawable/user_button_selector"
            android:text="@string/mine" />
    </RadioGroup>
</LinearLayout>
